fixing background resize on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -22,6 +22,14 @@ main {
   --spacing-five: 3vw;
 }
 
+html {
+  background: url('./background/triangles.svg') no-repeat center center fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+}
+
 body {
   overflow-y: scroll; /* Show vertical scrollbar */
   width: 100%;
@@ -32,11 +40,6 @@ body {
   font-size: 1.2rem;
   color: var(--light);
   font-family: 'Quicksand', sans-serif;
-  background: url('./background/triangles.svg') no-repeat center center fixed;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;
 }
 
 /* html tags */
